Fix spacing

--- a/views/stylesheets/style.css.scss
+++ b/views/stylesheets/style.css.scss
@@ -14,7 +14,7 @@ $header-background: $hover-background;
 $light-background: #fff;
 $divider: #ebeeee;
 $section-divider: #b1b1b1;
-$menubar-height: 30px;
+$menubar-height: 40px;
 $leftcol-width: 299px;
 
 body {
@@ -148,6 +148,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
     height: 100%;
     overflow: auto;
 
